--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/react": "^13.4.0",
     "@types/big.js": "^6.1.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
